Documentation Updates - getting ready for RC release!

--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -28,8 +28,7 @@
   <div id="AdminPageWrapper">
    <div id="Header" onclick="location.href='<!-- tmpl_var PROGRAM_URL -->';" style="cursor:pointer;">
     <span id="Title">
-		<!-- tmpl_var root_login_message -->
-  		<!-- tmpl_var title -->
+		<!-- tmpl_var root_login_message --> <!-- tmpl_var title -->
     </span>
     <div class="floatclear"></div>
   </div><!-- ends id="Header" --> 
