--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -23,16 +23,13 @@
  Batch Sending Options
 </legend>
 
+<div id="previewBatchSendingSpeed"></div> 
 
-
-
-<div id="previewBatchSendingSpeed"> 
-</div> 
-
-
-
-
+<p>
+ Make sure to set these options to be below any hourly limitations that may be imposed on your hosting account!
+</p>
     
+
 <table> 
  <tr>
   <td>
@@ -48,7 +45,7 @@
     <p>
      Send: <!-- tmpl_var mass_send_amount_menu --> message(s) per batch
      <br /> 
-     and then wait and sleep: <!-- tmpl_var bulk_sleep_amount_menu --> seconds, before the next batch.
+     and then wait and sleep: <!-- tmpl_var bulk_sleep_amount_menu --> seconds, before sending the next batch.
     </p>
    </blockquote>
   </td>
