--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -45,8 +45,13 @@
    Use this Custom Template for your Mailing List: 
   </label>
   <br />
-  <textarea name="template_info" cols="70" rows="20"><!-- tmpl_var edit_this_template --></textarea>
+  <textarea name="template_info" cols="70" rows="20" wrap="off"><!-- tmpl_var edit_this_template --></textarea>
  </p>
+<!-- tmpl_if template_saved --> 
+	<p class="alert">
+		Saved at: <em><!-- tmpl_var TEMPLATES -->/<!-- tmpl_var list_settings.list -->.template</em>
+	</p>
+<!-- /tmpl_if --> 
  
  <!-- tmpl_if can_use_lwp_simple -->
 	 
