Playing with the, "hey you already ask to be unsubscribed" error stuff.

--- a/dada/DADA/Template/templates/error_already_sent_unsub_confirmation_screen.tmpl
+++ b/dada/DADA/Template/templates/error_already_sent_unsub_confirmation_screen.tmpl
@@ -63,7 +63,7 @@ address: </p>
 <input type="hidden" name="auth_code" value="<!-- tmpl_var auth_code -->" /> 
 
 <div style="text-align:center">
- <input type="submit" value="Resend Subscription Confirmation" /> 
+ <input type="submit" value="Resend Unsubscription Confirmation" /> 
 </div> 
 </form>
 
