s/list_admin_email/admin_email/g;

--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -156,7 +156,7 @@
  </tr>
  <tr>
   <td>
-   <code>&lt;!-- tmpl_var  list_settings.list_admin_email --&gt;</code>
+   <code>&lt;!-- tmpl_var  list_settings.admin_email --&gt;</code>
   </td>
   <td>
    The list administrator's email address.
