Making the copy sounded rightly and correction.

--- a/dada/DADA/Template/templates/profile_register.tmpl
+++ b/dada/DADA/Template/templates/profile_register.tmpl
@@ -1,11 +1,20 @@
 <!-- begin profile_register.tmpl --> 
 
 <h1>
-	Profile Registering is Successful!
+	Profile Registration is Successful!
 </h1> 
 
 <p>
-	We've just sent an email to you, with the your Profile Authorization Code.
+	We've just sent an email to you,</p>
+	
+	<ul>
+		<li>
+			 <!-- tmpl_var profile.email -->
+		</li>
+	</ul>
+	
+<p>
+	 with your Profile Authorization Code.
 </p> 
 
 <p>
