css/formatting tweaks.

--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -33,7 +33,7 @@
  <p>
   <strong>
    First, please read, understand and agree to the <em>GNU Public License</em>, and 
-   agree not to use Dada Mail for unsolicited email (SPAM):
+   agree not to use <!-- tmpl_var PROGRAM_NAME --> for unsolicited email (SPAM):
   </strong>
  </p>
  <p align="center">
