This fixes the problem with "Use Secure Sockets Layer (SSL)" not being able to be checked and have that preference saved. gh-1

--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -161,7 +161,7 @@ This will ultimately set the 'Return-Path' email header to the list administrati
      <tr>
       <td>
        <p>
-        <input type="checkbox" name="use_smtp_ssl" id="use_smtp_ssl" value="1" <!-- tmpl_if use_smtp_ssl -->checked="checked"<!-- /tmpl_if --> <!-- tmpl_unless can_use_smtp_ssl -->disabled="disabled"<!--/tmpl_unless-->/>
+        <input type="checkbox" name="use_smtp_ssl" id="use_smtp_ssl" value="1" <!-- tmpl_if list_settings.use_smtp_ssl -->checked="checked"<!-- /tmpl_if --> <!-- tmpl_unless can_use_smtp_ssl -->disabled="disabled"<!--/tmpl_unless-->/>
        </p>
       </td>
       <td>
