Small formatting tweaks

--- a/dada/DADA/Template/templates/new_list_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_screen.tmpl
@@ -77,9 +77,9 @@
 	<!-- /tmpl_if -->
  
 	 <p>
-	  What is the list's name? You may change this name any time you like. The list name cannot 
-	  contain, &lt;'s, &gt;'s or, &quot;'s. 
-	  <br />
+	  What is the Mailing List's name? You may change this name any time you like. The list name cannot 
+	  contain, &lt;'s, &gt;'s or, &quot;'s.</p>
+	  <p>
 	  <input type="text" name="list_name" value="<!-- tmpl_var name="list_name" escape="HTML" -->" class="full" maxlength="250" />
 	 </p>
 
@@ -156,7 +156,8 @@
 	  and will also be used for subscription/unsubscription links and filenames. 
 	  You should make the Short Name <strong>lowercase</strong> 
 	  and no more than 16 characters. Use only alphanumeric characters.
-	  <br />
+  	</p>
+	<p>
 	  <input type="text" name="list" value="<!-- tmpl_var name="list" escape="HTML"-->" size="16" maxlength="16" />
 	 </p>
 	 <hr />
@@ -202,7 +203,8 @@
  
 	 <p>
 	  Please make a password to protect your list:
-	  <br />
+  </p>
+	<p>
 	  <input type="password" name="password" value="<!-- tmpl_var name="password" escape="HTML"-->" size="16" maxlength="24" />
 	 </p>
  
@@ -228,7 +230,8 @@
  
 	 <p>
 	  Re-type the password to confirm:
-	  <br />
+  </p>
+	<p>
 	  <input type="password" name="retype_password" value="<!-- tmpl_var name="retype_password" escape="HTML"-->" size="16" maxlength="24" />
 	 </p>
 	 <hr />
@@ -260,7 +263,8 @@
 	 <p>
 	  What email address corresponds to the List Owner?
 	  (When emails are sent, they are sent on behalf of this email address.)
-	  <br />
+  </p>
+<p>
 	  <input type="text" name="list_owner_email" value="<!-- tmpl_var name="list_owner_email" escape="HTML"-->" class="full" maxlength="100" />
 	 </p>
 	 <hr />
