--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -33,7 +33,7 @@
 	<!-- tmpl_loop fields --> 
 	    <p>
 	     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      <!-- tmpl_var label escape=HTML -->: 
+	      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
 	     </label>
 	    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" disabled="disabled" />
 	    </p>
@@ -47,7 +47,7 @@
 	<!-- tmpl_loop fields --> 
 	    <p>
 	     <label for="<!-- tmpl_var name escape=HTML -->" style="width: 7em;float: left;text-align: right;margin-right: 0.5em;display: block">
-	      <!-- tmpl_var label escape=HTML -->:
+	      <!-- tmpl_var label escape=HTML --> (<!-- tmpl_var name escape=HTML -->): 
 	     </label>
 	    <input type="text" name="<!-- tmpl_var name escape=HTML -->" id="<!-- tmpl_var name escape=HTML -->" value="<!-- tmpl_var value escape=HTML -->" />
 	    </p>
