--- a/dada/DADA/Template/templates/error_mx_lookup_failed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_mx_lookup_failed_screen.tmpl
@@ -4,11 +4,18 @@
  Invalid Email Address
 </h1> 
 
-<p>The address you gave, 
-	<a href="mailto:<!-- tmpl_var subscriber.email-->">
-	 <!-- tmpl_var subscriber.email-->
-    </a>,
-doesn't seem to pass our verification because we couldn't find the hostname.
+<p>The email address you gave,</p>
+
+<blockquote>
+ <p>
+  <strong>
+	 <!-- tmpl_var subscriber.email -->
+ 	
+</strong> 
+</p>
+</blockquote> 
+ 
+<p>doesn't seem to pass our verification because we couldn't find the hostname.
 It's possible that you just typed it in
 incorrectly. You may 
 
