--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -470,8 +470,8 @@ This will ultimately set the 'Return-Path' email header to the list administrati
 						sasl_smtp_password:        $F('sasl_smtp_password'), 
 						use_pop_before_smtp:       $F('use_pop_before_smtp'), 
 						pop3_server:               $F('pop3_server'), 
-						pop3_username              $F('pop3_username'), 
-						pop3_password              $F('pop3_password'), 
+						pop3_username:             $F('pop3_username'), 
+						pop3_password:             $F('pop3_password'), 
 						pop3_use_ssl:              $F('pop3_use_ssl'), 
 						set_smtp_sender:           $F('set_smtp_sender'),
 						process:                   $F('process'),
