For whatever reason, giving this div an id of, "adv" breaks the fancy scriptalicious stuff, so I renamed it.

--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -86,12 +86,12 @@
 		 </p>
 		 <fieldset>
 		  <legend>
-		   <a href="#" onclick="toggleDisplay('adv');return false;">
+		   <a href="#" onclick="toggleDisplay('advanced_options');return false;">
 			+/- 
 		   </a>Advanced Options
 		  </legend>
 
-		<div id="adv" style="display:none"> 
+		<div id="advanced_options" style="display:none"> 
 		<table>
 		  <tr>
 		   <td>
@@ -222,14 +222,7 @@
 </fieldset> 
 
 
-<!--
- <p><strong><a href="#" onclick="toggleDisplay('text_message');return false;">+/-</a></strong>
- <label for="text_message_body">
-   PlainText Version
-  </label>
- </p>
- --> 
- 
+
  
 
 
