--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -136,7 +136,8 @@ $PLUGIN_CONFIGS = {
         Log                       			=> undef,         
         Send_Messages_To          			=> undef, 
         MessagesAtOnce            			=> undef, 
-        Max_Size_Of_Any_Message             => undef, 
+        Soft_Max_Size_Of_Any_Message        => undef, 
+		Max_Size_Of_Any_Message             => undef, 
         Default_Soft_Bounce_Score 			=> undef, 
         Default_Hard_Bounce_Score 			=> undef, 
         Score_Threshold           			=> undef, 
