--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -519,6 +519,13 @@ $ADMIN_MENU = [
 #					},
 
 
+#					{-Title      => 'Screen Cache',
+#					 -Title_URL  => $PLUGIN_URL."/screen_cache.cgi",
+#					 -Function   => 'screen_cache',
+#					 -Activated  => 0,
+#					},
+
+
 				],
 			},
 
