--- a/dada/DADA/Template/templates/list_page_screen.tmpl
+++ b/dada/DADA/Template/templates/list_page_screen.tmpl
@@ -15,7 +15,7 @@
 <!-- tmpl_var subscription_form --> 
 	
 
-<div id="list_information">
+<div id="list_information"><!-- tmpl_if comment -->Not sure what this id is for!<!-- /tmpl_if -->
 
 <h2>List Information:</h2>
 
@@ -50,7 +50,7 @@
 </ul>
 
 
-<div> 
+</div> 
 
 
 
