Removed old social bookmarking badges, added Facebook

--- a/dada/DADA/Template/templates/social_bookmarking_badges_widget.tmpl
+++ b/dada/DADA/Template/templates/social_bookmarking_badges_widget.tmpl
@@ -6,6 +6,14 @@
 <ul class="archive_badges_ul">
 
 <li class="archive_badges_li">
+ <a name="fb_share" type="button_count" href="http://www.facebook.com/sharer.php">
+	Share
+</a>
+<script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
+
+</li>
+
+<li class="archive_badges_li">
  <a href="http://del.icio.us/post?url=<!-- tmpl_var uri_encoded_url -->&amp;title=<!-- tmpl_var uri_encoded_subject -->">
  <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_delicious.png/" style="border:0px;padding:5px" title="Add to: del.icio.us" />
  </a>
@@ -34,26 +42,12 @@
 
 
 <li class="archive_badges_li">
- <a href="http://cgi.fark.com/cgi/fark/edit.pl?new_url=<!-- tmpl_var uri_encoded_url -->&amp;new_comment=<!-- tmpl_var uri_encoded_subject -->&amp;linktype={{category}}">
- <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_fark.png/" style="border:0px;padding:5px" title="Add to: fark" />
- </a>
-</li>
-
-
-
-<li class="archive_badges_li">
  <a href="http://myweb2.search.yahoo.com/myresults/bookmarklet?u=<!-- tmpl_var uri_encoded_url -->&amp;t=<!-- tmpl_var uri_encoded_subject -->">
  <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_yahoo.png/" style="border:0px;padding:5px" title="Add to: Y!" />
  </a>
 </li>
 
 
-
-<li class="archive_badges_li">
- <a href="http://ma.gnolia.com/bookmarklet/add?url=<!-- tmpl_var uri_encoded_url -->&amp;title=<!-- tmpl_var uri_encoded_subject -->">
- <img src="<!-- tmpl_var PROGRAM_URL -->/img/badge_magnolia.png/" style="border:0px;padding:5px" title="Add to: magnolia" />
- </a>
-</li>
 
 
 </ul> 
