--- a/dada/DADA/Template/templates/example_dada_config.tmpl
+++ b/dada/DADA/Template/templates/example_dada_config.tmpl
@@ -37,21 +37,21 @@ $CLICKTHROUGH_DB_TYPE     = 'SQL';
 %SQL_PARAMS = ( 
 
 	# May just be, "localhost" 
-	dbserver         => 'localhost',
+	dbserver         => '<!-- tmpl_var sql_server -->',
 		
-	database         => '',
+	database         => '<!-- tmpl_var sql_database -->',
 	
 	# MySQL:      3306
 	# PostgreSQL: 5432      
-	port             => '3306',
+	port             => '<!-- tmpl_var sql_port -->',
 	
 	# MySQL:      mysql 
 	# PostgreSQL: Pg
 	# SQLite:     SQLite
-	dbtype           => 'mysql',  
+	dbtype           => '<!-- tmpl_var backend -->',  
 	
-	user             => '',          
-	pass             => '',
+	user             => '<!-- tmpl_var sql_username -->',          
+	pass             => '<!-- tmpl_var sql_password -->',
 
 	subscriber_table                => 'dada_subscribers',
 	profile_table                   => 'dada_profiles', 
