--- a/dada/install/templates/install_debug_info.tmpl
+++ b/dada/install/templates/install_debug_info.tmpl
@@ -1,4 +1,6 @@
-<h1>DEBUG INFO MATION</h1> 
-<pre> 
-	<!-- tmpl_var Big_Pile_Of_Errors --> 	
-</pre> 
+<!-- tmpl_if Trace --> 
+	<h1>DEBUG INFO MATION</h1> 
+	<pre> 
+		<!-- tmpl_var Big_Pile_Of_Errors --> 	
+	</pre> 
+<!-- /tmpl_if --> 
