--- a/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
@@ -1,23 +1,37 @@
 <!-- begin error_bad_setup_screen.tmpl --> 
 
 <h1>
- Welcome to <!-- tmpl_var PROGRAM_NAME -->.
+ Welcome to <!-- tmpl_var PROGRAM_NAME -->!
 </h1> 
 
 <p>
  <!-- tmpl_var PROGRAM_NAME --> is running on your account, but it's not configured properly.</p>
+
+<p>If you haven't configured <!-- tmpl_var PROGRAM_NAME -->, try using the included installer:</p> 
+
+<p>	
 	<ul> 
 		<li>
-			<p>If you haven't configured <!-- tmpl_var PROGRAM_NAME -->, please do so, now</p> 
+			<p>Rename the, <em>dada/<strong>install-disabled</strong></em> directory to, <em>dada/<strong>install</strong></em></p> 
 		</li>
 		<li>
+			<p>
+				Change the permissions of the <em>dada/install/<strong>installer.cgi</strong></em> script to, <strong>755</strong>
+			</p>
+		</li> 
+		<li>
+			<p>
+				Visit the, <em>dada/install/<strong>installer.cgi</strong></em> script in your web browser (try clicking <a href="./install/installer.cgi">HERE</a>) and follow the instructions. 
+			</p>
+		</li> 
+		
+		
+	</ul> 
+	
 <p>
 	If you have already configured <!-- tmpl_var PROGRAM_NAME -->, your hosting environment may have changed 
 	and <!-- tmpl_var PROGRAM_NAME --> may need to be reconfigured.
 </p> 
-</li>
-</ul> 
-
 
 
 <div style="text-align:center">
