--- a/dada/installer-disabled/templates/installer_scrn_configure_dada_mail.tmpl
+++ b/dada/installer-disabled/templates/installer_scrn_configure_dada_mail.tmpl
@@ -153,7 +153,7 @@ access <em>any</em> mailing list.</p>
 	<ul> 
 	<li>
 	<p class="error"> 
-		The directory, <!-- tmpl_var dada_files_loc -->/<!-- tmpl_var Dada_Files_Dir_Name -->already exists - we won't try to overwrite it.
+		The directory, <em><strong><!-- tmpl_var dada_files_loc --></strong>/<!-- tmpl_var Dada_Files_Dir_Name --></em> already exists - we won't try to overwrite it.
 	</p>
 	</li>
 	</ul> 
@@ -167,6 +167,8 @@ access <em>any</em> mailing list.</p>
 <p class="positive">	
 	<!-- tmpl_var PROGRAM_NAME --> will need to write various files and will need a directory for which to do this in. You'll 
 	have to tell Dada Mail where you'd like this directory to live. The directory will be called, <em><!-- tmpl_var Dada_Files_Dir_Name --></em>. 
+	</p>
+	<p>
 	Usually, this directory will live under your home directory and <!-- tmpl_var PROGRAM_NAME --> can usually guess where that is, but if it guesses wrong
 	or it cannot create the, <em><!-- tmpl_var Dada_Files_Dir_Name --></em> directory in your home directory, you may set an alternative directory. 
 </p> 
