--- a/dada/installer-disabled/templates/installer_scrn_install_dada_mail.tmpl
+++ b/dada/installer-disabled/templates/installer_scrn_install_dada_mail.tmpl
@@ -45,6 +45,19 @@
 	without this directory being removed or renamed. 
 </p> 
 
+<form> 
+<div style="text-align:center"> 
+<input type="button" value="Try Moving the, 'dada/installer' Directory and Disabling the, 'install.cgi' script" class="cautionary" onClick="move_installer_dir();" />	
+</div> 
+</form> 
+
+<div id="move_results" style="display:none"> 
+
+
+</div> 
+
+
+
 <h2>Additional Configuration?</h2> 
 
 <p>If you want to perform any additional configuration, your outside config file is located at, </p> 
